--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "firebase-tools": "^9.14.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
+    "scss-reset": "^1.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
